logo & header background

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">EAC 3000</a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img src="img/logo-inv.png" style="display: inline; width: 80px; height: 30px" alt="" />
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,6 +83,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
+                <img src="img/logo-inv.png" style="width: 400px; height: 160px; margin-bottom: 20px" alt="" />
+
+                <h1>Epic Auto Cleaner 3000</h1>
+                
                 <div class="intro-lead-in">Witaj w naszej myjni!</div>
                 <div class="intro-heading">Poznaj nowoczesne rozwiązania</div>
                 <a href="#services" class="page-scroll btn btn-xl">Usługi</a>
