Add 'uslugi' icons. Improve top container design and image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+
     <link href="css/agency.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -106,26 +107,23 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <img src="img/carwash/basicwash.svg" class="fa fa-stack">
                     </span>
                     <h4 class="service-heading">Myjnia standard</h4>
                     <p class="text-muted">Skuteczne w umiarkowanej cenie i czasie rozwiązanie na zanieczyszczenie twojego samochodu</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <img src="img/carwash/streamwash.svg"/>
                     </span>
                     <h4 class="service-heading">Myjna anty-rysowa</h4>
                     <p class="text-muted">Pozbądź sie nie tylko brudu z samochodu ale również skutecznie zamaskuj wszelakie rysy.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <img src="img/carwash/superwash.svg"/>
                     </span>
-                    <h4 class="service-heading">Myjnia parowa</h4>
+                    <h4 class="service-heading">Myjnia ekspresowa</h4>
                     <p class="text-muted">Jeśli zależy ci na czasie to rozwiązanie jest idealne dla ciebie. Umyj samochód w kilka minut i nie trać czasu!</p>
                 </div>
             </div>
