Change Opinions section

--- a/index.html
+++ b/index.html
@@ -323,22 +323,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Oni już wiedzą</h2>
+                    <h3 class="section-subheading text-muted">Opinię najwiekszych osobistości w świecie samochodów</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
+                        <h4>Agata Kapeć</h4>
+                        <p class="text-muted">Lider działu do spraw czyszczenia Volvo</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li>
+                                <div class="alert alert-info">
+                                    <span>Niezapomniane doświadczenia, nigdy nie przypuszczałam, że myjnia może myjnie mogą się tak różnić</span>
+                                    <i class="fa fa-comment-o fa-lg" style="padding-left: 10px"></i>
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -346,14 +346,14 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
+                        <h4>Andrzej Krzykliwy</h4>
+                        <p class="text-muted">Krytyk Samochodowy</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li>
+                                <div class="alert alert-info">
+                                    <span>W końcu myjnia do której aż chce się jeździć</span>
+                                    <i class="fa fa-comment-o fa-lg" style="padding-left: 10px"></i>
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -361,14 +361,14 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
+                        <h4>Karolina Kwiatuszek</h4>
+                        <p class="text-muted">Kierowca zawodowy</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li>
+                                <div class="alert alert-info">
+                                    <span>Po prostu najlepsza myjnia w mieście</span>
+                                    <i class="fa fa-comment-o fa-lg" style="padding-left: 10px"></i>
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -376,7 +376,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Przekonaj się sam o mocy naszych myjni</p>
                 </div>
             </div>
         </div>
