Service & price sections now agree. A few minor edits.

--- a/index.html
+++ b/index.html
@@ -109,22 +109,22 @@
                     <span class="fa-stack fa-4x">
                         <img src="img/carwash/basicwash.svg" class="fa fa-stack">
                     </span>
-                    <h4 class="service-heading">Myjnia standard</h4>
-                    <p class="text-muted">Skuteczne w umiarkowanej cenie i czasie rozwiązanie na zanieczyszczenie twojego samochodu</p>
+                    <h4 class="service-heading">Myjnia automatyczna</h4>
+                    <p class="text-muted">Skutecznie, szybko i w przystępnej cenie. Rozwiązanie na zanieczyszczenie twojego samochodu. Oferujemy mycie (również z aktywną pianą), suszenie i woskowanie.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <img src="img/carwash/streamwash.svg"/>
                     </span>
-                    <h4 class="service-heading">Myjna anty-rysowa</h4>
-                    <p class="text-muted">Pozbądź sie nie tylko brudu z samochodu ale również skutecznie zamaskuj wszelakie rysy.</p>
+                    <h4 class="service-heading">Myjnia ręczna</h4>
+                    <p class="text-muted">Dokładne i staranne czyszczenie auta. Oferujemy mycie podstawowe, kompletne, jak również pranie tapicerki.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <img src="img/carwash/superwash.svg"/>
                     </span>
-                    <h4 class="service-heading">Myjnia ekspresowa</h4>
-                    <p class="text-muted">Jeśli zależy ci na czasie to rozwiązanie jest idealne dla ciebie. Umyj samochód w kilka minut i nie trać czasu!</p>
+                    <h4 class="service-heading">Dodatkowe usługi</h4>
+                    <p class="text-muted">Pozbądź sie nie tylko brudu z samochodu ale również skutecznie zamaskuj wszelkie rysy, usuń naklejki, doczyść felgi. W ofercie mamy polerowanie lakieru, ręczne woskowanie, usuwanie naklejek, czyszczenie skórzanych tapicerek i doczyszczanie felg aluminiowych.</p>
                 </div>
             </div>
         </div>
@@ -151,7 +151,6 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Ceny mycia automatycznego</h4>
-                        <!--<p class="text-muted">Graphic Design</p>-->
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -165,7 +164,6 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Ceny mycia ręcznego</h4>
-                        <!--<p class="text-muted">Website Design</p>-->
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -179,51 +177,8 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Ceny usług dodatkowych</h4>
-                        <!--<p class="text-muted">Website Design</p>-->
                     </div>
                 </div>
-                <!--<div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Usługi dodatkowe</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>-->
             </div>
         </div>
     </section>
@@ -324,7 +279,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Oni już wiedzą</h2>
-                    <h3 class="section-subheading text-muted">Opinię najwiekszych osobistości w świecie samochodów</h3>
+                    <h3 class="section-subheading text-muted">Opinie najwiekszych osobistości w świecie samochodów</h3>
                 </div>
             </div>
             <div class="row">
@@ -336,7 +291,7 @@
                         <ul class="list-inline social-buttons">
                             <li>
                                 <div class="alert alert-info">
-                                    <span>Niezapomniane doświadczenia, nigdy nie przypuszczałam, że myjnia może myjnie mogą się tak różnić</span>
+                                    <span>Niezapomniane doświadczenia, nigdy nie przypuszczałam, że myjnie mogą się tak różnić.</span>
                                     <i class="fa fa-comment-o fa-lg" style="padding-left: 10px"></i>
                                 </div>
                             </li>
@@ -351,7 +306,7 @@
                         <ul class="list-inline social-buttons">
                             <li>
                                 <div class="alert alert-info">
-                                    <span>W końcu myjnia do której aż chce się jeździć</span>
+                                    <span>W końcu myjnia, do której aż chce się jeździć.</span>
                                     <i class="fa fa-comment-o fa-lg" style="padding-left: 10px"></i>
                                 </div>
                             </li>
@@ -366,7 +321,7 @@
                         <ul class="list-inline social-buttons">
                             <li>
                                 <div class="alert alert-info">
-                                    <span>Po prostu najlepsza myjnia w mieście</span>
+                                    <span>Po prostu najlepsza myjnia w mieście!</span>
                                     <i class="fa fa-comment-o fa-lg" style="padding-left: 10px"></i>
                                 </div>
                             </li>
@@ -376,39 +331,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Przekonaj się sam o mocy naszych myjni</p>
+                    <h3 class="large text-muted">Przekonaj się sam o mocy naszych myjni!</h3>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Clients Aside -->
-    <aside class="clients">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </aside>
 
     <section id="contact">
         <div class="container">
