--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
                         <a class="page-scroll" href="#team">Opinie</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#location">Lokalizacja</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -337,6 +341,52 @@
         </div>
     </section>
 
+    <!-- Clients Aside -->
+    <aside class="clients">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </aside>
+
+    <section id="location">
+        <div class="container">
+            <div class="row" style="padding-bottom: 1em">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Gdzie jesteśmy</h2>
+
+                </div>
+                <h5 class="text-muted col-lg-12 text-left">Myjnia Epic Auto Cleaner 3000</h5>
+                <h5 class="text-muted col-lg-12 text-left">ul. politechniki 23</h5>
+                <h5 class="text-muted col-lg-12 text-left">546-32 Łódź</h5>
+                <h5 class="text-muted col-lg-12 text-left">tel. (042)533-32-12</h5>
+            </div>
+            <div class="row">
+                <div id="map-canvas"></div>
+            </div>
+        </div>
+    </section>
+
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -520,8 +570,11 @@
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
 
+    <!-- google maps -->
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+
 
 </body>
 
