--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
                         <a class="page-scroll" href="#team">Opinie</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#gallery">Galeria</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#location">Lokalizacja</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
+
 
                 </ul>
             </div>
@@ -341,6 +345,54 @@
         </div>
     </section>
 
+    <section id="gallery">
+        <div class="container">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Galeria</h2>
+            </div>
+            <div class="row">
+
+                <div class="col-md-4 col-sm-6 portfolio-item gallery-item">
+                    <a href="#gallery2" class="portfolio-link" data-toggle="modal">
+                        <img src="img/gallery/Rzut%20ircha.jpg" class="img-responsive img-gallery" alt="">
+                    </a>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item gallery-item">
+                    <a href="#gallery3" class="portfolio-link" data-toggle="modal">
+                        <img src="img/gallery/Rzut%20na%20salonik.jpg" class="img-responsive img-gallery" alt="">
+                    </a>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item gallery-item">
+                    <a href="#gallery4" class="portfolio-link" data-toggle="modal">
+                        <img src="img/gallery/rzut_gabka.jpg" class="img-responsive img-gallery" alt="">
+                    </a>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item gallery-item">
+                    <a href="#gallery5" class="portfolio-link" data-toggle="modal">
+                        <img src="img/gallery/PO%20SPLUKANIU%202.JPG" class="img-responsive img-gallery" alt="">
+                    </a>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item gallery-item">
+                    <a href="#gallery1" class="portfolio-link" data-toggle="modal">
+                        <img src="img/gallery/P1040405.JPG" class="img-responsive img-gallery" alt="">
+                    </a>
+                </div>
+
+
+
+
+            </div>
+
+
+
+
+        </div>
+    </section>
+
     <section id="location">
         <div class="container">
             <div class="row" style="padding-bottom: 1em">
@@ -519,6 +571,111 @@
                                 <li>Impregnacja i czyszczenie tapicerki skórzanej</li>
                                 <li>Doczyszczanie felg aluminiowych</li>
                             </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Zamknij</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="gallery1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <img class="img-responsive" style="margin: auto" src="img/gallery/P1040405.JPG" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Zamknij</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="gallery5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <img class="img-responsive" style="margin: auto" src="img/gallery/PO%20SPLUKANIU%202.JPG" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Zamknij</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="gallery4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <img class="img-responsive" style="margin: auto" src="img/gallery/rzut_gabka.jpg" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Zamknij</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="gallery2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <img class="img-responsive" style="margin: auto" src="img/gallery/Rzut%20ircha.jpg" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Zamknij</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="gallery3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <img class="img-responsive" style="margin: auto" src="img/gallery/Rzut%20na%20salonik.jpg" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Zamknij</button>
                         </div>
                     </div>
